lustre/include/obd_support.h
@@ -370,6 +370,8 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_LDLM_WATERMARK_LOW	 0x327
 #define OBD_FAIL_LDLM_WATERMARK_HIGH	 0x328
 
+#define OBD_FAIL_LDLM_GRANT_CHECK        0x32a
+
 /* LOCKLESS IO */
 #define OBD_FAIL_LDLM_SET_CONTENTION     0x385
 
