lustre/tests/recovery-small.sh
@@ -2510,6 +2510,7 @@ test_131() {
 	# another IO under the same lock
 	#define OBD_FAIL_OSC_DELAY_IO            0x414
 	$LCTL set_param fail_loc=0x80000414
+	$LCTL set_param fail_val=4 fail_loc=0x80000414
 	dd if=/dev/zero of=$DIR/$tfile count=1 conv=notrunc oflag=dsync &
 	local pid=$!
 	sleep 1
